[package]
name = "kitchen-native"
version = "0.1.0"
authors = ["Daniel Yule <daniel.yule@gmail.com>"]

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
"path" = "src/client.rs"

[dependencies]
optra = "0.2"
rdiff = "0.1"
crdt_fileset = "0.1"
notify = {version = "2.6", git = "https://github.com/passcod/rsnotify"}
eventual = "^0.1"
wamp = "0.1"
base64 = "^0.2"
log = "0.3"
env_logger = "0.3"
getopts = "0.2"
byteorder = "0.5"
